--- a/index.html
+++ b/index.html
@@ -8,6 +8,7 @@
 	<link href="https://fonts.googleapis.com/css2?family=Sofia&display=swap" rel="stylesheet">
 	<link rel="stylesheet" href="css/bootstrap.min.css">
 	<link rel="stylesheet" href="css/all.min.css">
+	<link rel="icon" href="fav.jpg" sizes="16x16" type="image/png"> 
 	<link rel="stylesheet" href="css/style.css">
 </head>
 <body>
